--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ pre-commit-hooks = "^4.0.1"
 safety = "^1.10.3"
 reorder-python-imports = "^2.6.0"
 aioresponses = "^0.7.2"
+sphinx-rtd-theme = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
