--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "defectio"
-version = "0.1.3a"
+version = "0.1.4a"
 description = "Wrapper for Revolt API"
 authors = ["Leon Bowie <leon@bowie-co.nz>"]
 license = "MIT"
@@ -53,7 +53,9 @@ pre-commit-hooks = "^4.0.1"
 safety = "^1.10.3"
 reorder-python-imports = "^2.6.0"
 aioresponses = "^0.7.2"
-sphinx-rtd-theme = "^0.5.2"
+furo = "^2021.8.31"
+sphinxext-opengraph = "^0.4.2"
+sphinx-copybutton = "^0.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
