--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ aioresponses = "^0.7.2"
 furo = "^2021.8.31"
 sphinxext-opengraph = "^0.4.2"
 sphinx-copybutton = "^0.4.0"
+sphinx-autobuild = "^2021.3.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
