--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ aiohttp = "^3.7.4"
 ulid-py = "^1.1.0"
 orjson = "^3.6.3"
 msgpack = "^1.0.2"
+aiofiles = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.8b0"
